--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ main{
       h3{
         border-left: 5px solid var(--primary);
         color: var(--primary);
-        font-size: 1.6rem;
+        font-size: 1.8rem;
         font-weight: 700;
         margin-bottom: 16px;
         padding: 8px 0 8px 8px;
@@ -112,6 +112,9 @@ main{
       position: relative;
       transition: opacity 0.3s;
 
+      &::-webkit-details-marker{
+        display: none;
+      }
       &:hover{
         opacity: 0.7;
       }
@@ -209,7 +212,7 @@ main{
   display: block;
   font-weight: 700;
   margin: 16px auto;
-  padding: 6px 12px;
+  padding: 12px;
   position: relative;
   text-align: center;
   width: 100%;
@@ -255,3 +258,4 @@ main{
     }
   }
 }
+
