--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ main{
   border-radius: 5px;
   color: var(--primary);
   display: block;
+  font-size: 1.6rem;
   font-weight: 700;
   margin: 16px auto;
   padding: 12px;
