--- a/root.css
+++ b/root.css
@@ -1,7 +1,7 @@
 :root{
-    --primary: #f55952;
-    --secondary: #ff9488;
-    --tertiary: #ffcac2;
+    --primary: #106db7;
+    --secondary: #799bcf;
+    --tertiary: #becbe7;
     --bg: #ffe5e0;
     --txt: #4e4e4e;
 }
