--- a/style.css
+++ b/style.css
@@ -191,11 +191,28 @@ main{
           margin-left: 40px;
 
           p{
+            padding-left: 25px;
             position: relative;
             
             &::before{
               background-image: url('./img/icon/bus.svg');
 
+            }
+          }
+          .train{
+            position: relative;
+
+            &::before{
+              background-image: url('./img/icon/train.svg');
+              background-repeat: no-repeat;
+              background-size: cover;
+              content: '';
+              display: block;
+              height: 20px;
+              width: 20px;
+              position: absolute;
+              top: calc(50% - 10px);
+              left: 0;
             }
           }
         }
