--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
   color: #000;
   font-family: 'Noto Sans JP', sans-serif;
   font-weight: 500;
-  height: 100%;
   width: 100%;
   letter-spacing: 0.05rem;
   line-height: 1.5;
@@ -21,268 +20,87 @@ body{
 }
 
 .page-content{
-  background-color:#f7f5f5;
+  background-color: #fff;
+  box-shadow: 0 0 3px #333;
   color: var(--txt);
   height: 100%;
   width: 100%;
   margin: 0 auto;
+  max-width: var(--mw);
   min-height: 100dvh;
-  overflow: hidden auto;
   position: relative;
   z-index: 0;
 }
 
 main{
-  background-color: #fff;
   font-size: 1.3rem;
-  margin: 0 auto;
-  max-width: 768px;
-  min-height: 100dvh;
-  overflow: hidden auto;
-  padding: 16px;
-  position: relative;
+  padding: 32px 16px;
 
   h1{
     color: var(--primary);
-    font-size: 4.0rem;
     font-weight: 700;
+    line-height: 1.2;
     text-align: center;
 
     span{
       display: block;
     }
+    .en{
+      font-size: 4.0rem;
+    }
     .ja{
       font-size: 2.0rem;
     }
   }
-  section{
-    border-bottom: 1px solid var(--tertiary);
-    margin: 16px 0;
-    padding: 16px;
-    width: 100%;
-    
-    h2{
-      color: var(--primary);
-      font-size: 2.0rem;
-      font-weight: 700;
-      text-align: center;
-      padding-bottom: 16px;
-    }
-    article{
-      margin: 16px 0 32px;
-      width: 100%;
-
-      h3{
-        border-left: 5px solid var(--primary);
-        color: var(--primary);
-        font-size: 1.8rem;
-        font-weight: 700;
-        margin-bottom: 16px;
-        padding: 8px 0 8px 8px;
-      }
-    }
-  }
 }
 
-.route-wrap{
-  margin: 16px 0;
+.t-column-wrap{
+  display: grid;
+  grid-template-columns: 75px 1fr;
 
-  details{
-    border-top: 1px solid #ccc;
+  .t-column-left{
+    display: grid;
+    grid-template-rows: 75px;
+    grid-auto-rows: 75px;
 
-    &:last-child{
+    p{
+      text-align: center;
+    }
+    p:nth-child(2n){
       border-bottom: 1px solid #ccc;
     }
-    &[open] summary{
-      background-color: #eee;
+  }
+  .t-column-right{
+    display: grid;
+    grid-template-rows: 75px;
+    grid-auto-rows: 75px;
 
-      &:hover{
-        opacity: 1.0;
-      }
-      &::after{
-        transform: rotate(-90deg);
-      }
-    }
-    
-    summary{
-      cursor: pointer;
-      display: block;
-      padding: 16px;
-      position: relative;
-      transition: opacity 0.3s;
+    background-image: repeating-linear-gradient(to bottom, #fff 0, #fff 73.5px, #ccc 75px, #fff 75px);
 
-      &::-webkit-details-marker{
-        display: none;
-      }
-      &:hover{
-        opacity: 0.7;
-      }
-      &::after{
-        background-image: url('./img/icon/arrow.svg');
-        background-repeat: no-repeat;
-        background-size: contain;
-        content: '';
-        display: block;
-        height: 20px;
-        width: 20px;
-        position: absolute;
-        top: calc(50% - 10px);
-        right: 5%;
-        transform: rotate(90deg);
-        transition: transform 0.3s;
-      }
+    .t-content-item{
+      background-color: var(--secondary);
+      border-radius: 10px;
+      color: #fff;
       
-      .station{
-        color: var(--primary);
-        font-size: 1.6rem;
-        font-weight: bold;
-        margin-bottom: 8px;
-      }
-      .time, .transfer{
-        display: inline-block;
-        margin-right: 8px;
-      }
-    }
-    
-    .route-detail{
-      margin: 16px 0;
+      a{
+        display: grid;
+        grid-template-columns: 60px 1fr;
+        gap: 16px;
+        height: 100%;
+        width: 100%;
+        padding: 8px;
 
-      > div{
-        position: relative;
-        
-        &::before{
-          border: 2px solid var(--primary);
-          content: '';
-          display: block;
-          height: calc(100% + 17.5px);
-          position: absolute;
-          top: 30px;
-          left: 17.5px;
-          z-index: 1;
-        }
-        &:last-child{
-          &::before{
-            border-color: transparent;
-          }
-        }
-        .station, .destination{
-          background-color: #eee;
-          color: var(--primary);
-          font-size: 1.6rem;
-          font-weight: 700;
-          padding: 16px;
-          padding-left: 40px;
-          position: relative;
-
-          &::before{
-            background-color: var(--primary);
-            border-radius: 50%;
-            content: '';
-            display: block;
-            height: 20px;
-            width: 20px;
-            position: absolute;
-            top: calc(50% - 10px);
-            left: 10px;
-          }
-        }
-        .info{
-          margin: 16px 0;
-          margin-left: 40px;
-
-          p{
-            position: relative;
-            
-            &::before{
-              background-image: url('./img/icon/bus.svg');
-
+        .txtBox{
+          .head{
+            span{
+              margin-right: 8px;
             }
           }
+          .ttl{
+            font-size: 1.6rem;
+            font-weight: 700;
+          }
         }
-      }
-    }
-  }
-}
-
-.linkBtn{
-  border: 1px solid var(--primary);
-  border-radius: 5px;
-  color: var(--primary);
-  display: block;
-  font-size: 1.3rem;
-  font-weight: 700;
-  margin: 16px auto;
-  padding: 12px;
-  position: relative;
-  text-align: center;
-  transition: opacity 0.3s;
-  width: 100%;
-
-  &:hover{
-    opacity: 0.7;
-  }
-  &[target="_blank"]::after{
-    aspect-ratio: 1;
-    background-image: url('./img/icon/open-in-new.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    content: '';
-    display: block;
-    height: 20px;
-    position: absolute;
-    top: calc(50% - 10px);
-    right: 12px;
-  }
-}
-
-.list-note{
-  margin: 16px 0;
-  li{
-    position: relative;
-    
-    &::before{
-      content: '※';
-    }
-  }
-}
-
-.column-wrap{
-  display: grid;
-  gap: 8px;
-}
-
-.imgBox{
-  img{
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-}
-
-.slick-dots{
-  .slick-active{
-    button::before{
-      font-size: 12px;
-    }
-  }
-}
-
-.slide-wrap{
-  .slide-item{
-    .slide-item-inner{
-      display: grid;
-      gap: 8px 16px;
-    }
-  }
-  .slick-dots{
-    li{
-      button::before{
-        color: var(--secondary);
-      }
-    }
-    .slick-active{
-      button::before{
-        color: var(--primary);
       }
     }
   }
