--- a/style.css
+++ b/style.css
@@ -54,6 +54,69 @@ main{
   }
 }
 
+.t-wrap{
+  height: 100%;
+  position: relative;
+
+  .t-head{
+    .list-day{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 16px;
+
+      li{
+        a{
+          border: 1px solid var(--secondary);
+          border-radius: 5px;
+          color: var(--secondary);
+          display: block;
+          height: 100%;
+          width: 100%;
+          padding: 8px;
+          text-align: center;
+        }
+      }
+    }
+  }
+  .t-body{
+    display: grid;
+    grid-template-columns: repeat(3, calc(var(--i) * 0.9));
+    grid-template-rows: auto;
+    gap: 0 calc(var(--i) * 0.02);
+    overflow: scroll auto;
+    scrollbar-width: 100%;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+
+    .t-content{
+      height: 100%;
+      position: relative;
+      scroll-snap-align: center;
+
+      .t-content-head{
+        background-color: var(--primary);
+        border-radius: 5px;
+        padding: 8px;
+        position: sticky;
+        top: 20px;
+        left: 0;
+        width: 100%;
+        z-index: 10;
+
+        .t-content-ttl{
+          color: #fff;
+          font-size: 1.6rem;
+          font-weight: 700;
+          text-align: center;
+        }
+      }
+      .t-content-body{
+        padding-top: 32px;
+      }
+    }
+  }
+}
+
 .t-column-wrap{
   display: grid;
   grid-template-columns: 75px 1fr;
@@ -78,9 +141,8 @@ main{
     background-image: repeating-linear-gradient(to bottom, #fff 0, #fff 73.5px, #ccc 75px, #fff 75px);
 
     .t-content-item{
-      background-color: var(--secondary);
+      background-color: var(--tertiary);
       border-radius: 10px;
-      color: #fff;
       
       a{
         display: grid;
@@ -97,7 +159,7 @@ main{
             }
           }
           .ttl{
-            font-size: 1.6rem;
+            font-size: 1.8rem;
             font-weight: 700;
           }
         }
